Still experience layout issues, but i have the structure in place, i need to do more research because it seems what im trying to achieve might not be possible with flex

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,3 +12,14 @@
       scrollbar-width: none;
   }
 }
+
+html {
+  background-color: black;
+  color: white;
+}
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+}
